add new label for security fix
Signed-off-by: Huan Jiang <seraphjiang@gmail.com>

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -19,6 +19,7 @@ changelog:
     - title: Security fix
       labels:
         - cve
+        - security vulnerability
     - title: Bug Fix
     - title: Other Changes
       labels:
